--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,13 +16,13 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <property name="spacing">
-     <number>6</number>
+     <number>0</number>
     </property>
     <property name="leftMargin">
      <number>0</number>
     </property>
     <property name="topMargin">
-     <number>17</number>
+     <number>20</number>
     </property>
     <property name="rightMargin">
      <number>0</number>
@@ -39,10 +39,13 @@
        <number>17</number>
       </property>
       <property name="bottomMargin">
-       <number>9</number>
+       <number>20</number>
       </property>
       <item>
        <widget class="QPushButton" name="exitBtn">
+        <property name="styleSheet">
+         <string notr="true">background-color: lightGray; padding: 20px</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -69,7 +72,11 @@
        </spacer>
       </item>
       <item>
-       <widget class="QComboBox" name="serverComboBox"/>
+       <widget class="QComboBox" name="serverComboBox">
+        <property name="styleSheet">
+         <string notr="true">padding: 17px; font-family: u001;</string>
+        </property>
+       </widget>
       </item>
       <item>
        <spacer name="horizontalSpacer_2">
@@ -85,48 +92,64 @@
        </spacer>
       </item>
       <item>
-       <widget class="QPushButton" name="zoomOutBtn">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
+       <layout class="QGridLayout" name="gridLayout">
+        <property name="rightMargin">
+         <number>0</number>
         </property>
-        <property name="font">
-         <font>
-          <pointsize>7</pointsize>
-         </font>
+        <property name="horizontalSpacing">
+         <number>15</number>
         </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="icons.qrc">
-          <normaloff>:/icons/icons/zoom-out.png</normaloff>:/icons/icons/zoom-out.png</iconset>
-        </property>
-       </widget>
-      </item>
-      <item>
-       <widget class="QPushButton" name="zoomInBtn">
-        <property name="sizePolicy">
-         <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
-          <horstretch>0</horstretch>
-          <verstretch>0</verstretch>
-         </sizepolicy>
-        </property>
-        <property name="font">
-         <font>
-          <pointsize>7</pointsize>
-         </font>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-        <property name="icon">
-         <iconset resource="icons.qrc">
-          <normaloff>:/icons/icons/zoom-in.png</normaloff>:/icons/icons/zoom-in.png</iconset>
-        </property>
-       </widget>
+        <item row="0" column="0">
+         <widget class="QPushButton" name="zoomOutBtn">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>7</pointsize>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">padding-top: 20px; padding-bottom: 20px; padding-left: 35px; padding-right: 35px;</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset resource="icons.qrc">
+            <normaloff>:/icons/icons/zoom-out.png</normaloff>:/icons/icons/zoom-out.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item row="0" column="1">
+         <widget class="QPushButton" name="zoomInBtn">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+            <horstretch>0</horstretch>
+            <verstretch>0</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="font">
+           <font>
+            <pointsize>7</pointsize>
+           </font>
+          </property>
+          <property name="styleSheet">
+           <string notr="true">padding-top: 20px; padding-bottom: 20px; padding-left: 35px; padding-right: 35px;</string>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="icon">
+           <iconset resource="icons.qrc">
+            <normaloff>:/icons/icons/zoom-in.png</normaloff>:/icons/icons/zoom-in.png</iconset>
+          </property>
+         </widget>
+        </item>
+       </layout>
       </item>
      </layout>
     </item>
