--- a/icons.qrc
+++ b/icons.qrc
@@ -3,5 +3,7 @@
         <file>icons/close.png</file>
         <file>icons/zoom-in.png</file>
         <file>icons/zoom-out.png</file>
+        <file>icons/error.png</file>
+	<file>icons/refresh.png</file>
     </qresource>
 </RCC>
