--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -32,11 +32,14 @@
     </property>
     <item>
      <layout class="QHBoxLayout" name="horizontalLayout">
+      <property name="spacing">
+       <number>15</number>
+      </property>
       <property name="leftMargin">
-       <number>17</number>
+       <number>20</number>
       </property>
       <property name="rightMargin">
-       <number>17</number>
+       <number>20</number>
       </property>
       <property name="bottomMargin">
        <number>20</number>
@@ -50,8 +53,22 @@
          <string/>
         </property>
         <property name="icon">
-         <iconset resource="icons.qrc">
+         <iconset>
           <normaloff>:/icons/icons/close.png</normaloff>:/icons/icons/close.png</iconset>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="refreshBtn">
+        <property name="styleSheet">
+         <string notr="true">padding: 20px</string>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+        <property name="icon">
+         <iconset>
+          <normaloff>:/icons/icons/refresh.png</normaloff>:/icons/icons/refresh.png</iconset>
         </property>
        </widget>
       </item>
@@ -60,12 +77,9 @@
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
         </property>
-        <property name="sizeType">
-         <enum>QSizePolicy::Fixed</enum>
-        </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>20</width>
+          <width>40</width>
           <height>20</height>
          </size>
         </property>
@@ -74,7 +88,7 @@
       <item>
        <widget class="QComboBox" name="serverComboBox">
         <property name="styleSheet">
-         <string notr="true">padding: 17px; font-family: u001;</string>
+         <string notr="true">padding: 17.5px; font-family: u001;</string>
         </property>
        </widget>
       </item>
@@ -119,7 +133,7 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset resource="icons.qrc">
+           <iconset>
             <normaloff>:/icons/icons/zoom-out.png</normaloff>:/icons/icons/zoom-out.png</iconset>
           </property>
          </widget>
@@ -144,7 +158,7 @@
            <string/>
           </property>
           <property name="icon">
-           <iconset resource="icons.qrc">
+           <iconset>
             <normaloff>:/icons/icons/zoom-in.png</normaloff>:/icons/icons/zoom-in.png</iconset>
           </property>
          </widget>
@@ -179,8 +193,6 @@
    </layout>
   </widget>
  </widget>
- <resources>
-  <include location="icons.qrc"/>
- </resources>
+ <resources/>
  <connections/>
 </ui>
